Fixes last banner alignment.

--- a/less/index.less
+++ b/less/index.less
@@ -250,7 +250,7 @@ h2 { font-size: 30px; }
   .captions {
     h1 {
       bottom: 50px;
-      font-size: 45px;
+      font-size: 40px;
       left: 30%;
       right: 40px;
       text-align: right;
@@ -260,7 +260,7 @@ h2 { font-size: 30px; }
 
 #s10 {
   height: 80vh;
-  margin: 100px 0;
+  margin: 90px 0;
 
   .background {
     .paper-shadow.z-1();
